fixed background canvas too big, adjusted functionality to have background drawing remain stationary ;)

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .backgroundCanvas {
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     z-index: -1;
