--- a/projects/circumcenter/css/styles.css
+++ b/projects/circumcenter/css/styles.css
@@ -10,6 +10,9 @@ body {
 
 .main-canvas {
     display: block;
+
+    position: fixed;
+
     height: 100%;
     width: 100%;
 }
